posiGen_FullsendBox/src/objects/Serialized_Item__c.object
<CustomObject>
    <fields>
        <fullName>Copy_of_Ascent_Item_Numeric_ID__c</fullName>
        <label>Copy of Ascent Item Numeric ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_of_Ascent_Item__c</fullName>
        <label>Copy of Ascent Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_of_Is_Serial_in_Ascent_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy of Is Serial in Ascent Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Group__c</fullName>
        <label>Item Group</label>
        <picklist>
            <picklistValues>
                <fullName>Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Hot Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Meter</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Serialized Items Manufactured</relationshipLabel>
        <relationshipName>Serialized_Items_Manufactured</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Numeric_ID__c</fullName>
        <label>Numeric ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Rating_UoM__c</fullName>
        <label>Rating UoM</label>
        <picklist>
            <picklistValues>
                <fullName>kW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kWh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Depending on the Item, this can be a unit of power, voltage, energy, etc.</description>
        <label>Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Serialized Items Default Supplier For</relationshipLabel>
        <relationshipName>Serialized_Items_Supplied</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Serialized Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Item_Group__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Model__c</columns>
        <columns>Rating__c</columns>
        <columns>Rating_UoM__c</columns>
        <columns>Standard_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Serialized Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>